[package]
name = "jks"
version = "0.3.1"
edition = "2021"
authors = ["agusibrahim <hi@agusibrahim.com>"]
description = "Java KeyStore (JKS) and PKCS12 encoder/decoder for Rust"
license = "MIT"
repository = "https://github.com/agusibrahim/jks"
homepage = "https://github.com/agusibrahim/jks"
keywords = ["jks", "java", "keystore", "pkcs12", "certificate"]
categories = ["cryptography"]

[lib]
name = "jks"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sha1 = "0.10"
asn1-rs = "0.5"
thiserror = "1.0"
rand = { version = "0.8", optional = true }
getrandom = { version = "0.2", optional = true }
openssl = { version = "0.10", optional = true }

[features]
default = ["rand", "openssl"]
openssl = ["dep:openssl"]
wasm = ["getrandom/js"]

[dev-dependencies]
rsa = "0.9"
pkcs8 = "0.10"
x509-cert = "0.2"
der = "0.7"
pem = "3.0"
rand = "0.8"

[[example]]
name = "pem"
path = "examples/pem.rs"

[[example]]
name = "keypass"
path = "examples/keypass.rs"

[[example]]
name = "truststore"
path = "examples/truststore.rs"

[[example]]
name = "compare"
path = "examples/compare.rs"

[[example]]
name = "jks_to_pem"
path = "examples/jks_to_pem.rs"

[[example]]
name = "jks_to_pem_bundle"
path = "examples/jks_to_pem_bundle.rs"

[[example]]
name = "wasm-test"
path = "examples/wasm-test.rs"
crate-type = ["cdylib", "rlib"]
