[package]
name = "jks-wasm-test"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[dependencies]
jks = { path = "../..", default-features = false, features = ["pkcs12", "wasm"] }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
